# qr-debug-camera

./: .gitignore  README.md  config.toml  package.json  pyproject.toml  tsconfig.json
browser/: injected-camera.ts
src/qr_debug_camera/: __init__.py  __main__.py  capture.py  cdp.py  chrome.py  cli.py  codec.py  config.py  geometry.py  injection.py  logger.py  overlay.py  stream.py
